First commited as before_38830_rev2