@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2010 IBM Corporation and others.
+ * Copyright (c) 2005, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -13,7 +13,6 @@ package org.eclipse.ui.internal.services;
 
 import java.util.HashMap;
 import java.util.Map;
-
 import org.eclipse.core.expressions.Expression;
 import org.eclipse.core.expressions.ExpressionInfo;
 import org.eclipse.ui.ISources;
@@ -36,7 +35,7 @@ import org.eclipse.ui.ISources;
  * <p>
  * TODO Move to "org.eclipse.ui" and resolve the above issue.
  * </p>
- * 
+ *
  * @since 3.2
  * @see org.eclipse.ui.ISources
  * @see org.eclipse.ui.contexts.IContextService
@@ -52,7 +51,7 @@ public final class SourcePriorityNameMapping implements ISources {
 
 	/**
 	 * The value returned if there is source priority for the given name
-	 * 
+	 *
 	 * @see SourcePriorityNameMapping#getMapping(String)
 	 */
 	public static final int NO_SOURCE_PRIORITY = 0;
@@ -96,7 +95,7 @@ public final class SourcePriorityNameMapping implements ISources {
 	 * Adds a mapping between a source name and a source priority. This method
 	 * also cleans up any existing mappings using the same name or priority.
 	 * There is a one-to-one relationship between name and priority.
-	 * 
+	 *
 	 * @param sourceName
 	 *            The name of the variable as it would appear in an XML
 	 *            expression; must not be <code>null</code>.
@@ -114,7 +113,7 @@ public final class SourcePriorityNameMapping implements ISources {
 		}
 
 		if (!sourcePrioritiesByName.containsKey(sourceName)) {
-			final Integer priority = new Integer(sourcePriority);
+			final Integer priority = Integer.valueOf(sourcePriority);
 
 			sourcePrioritiesByName.put(sourceName, priority);
 		}
@@ -127,7 +126,7 @@ public final class SourcePriorityNameMapping implements ISources {
 	 * {@link ISources#ACTIVE_CURRENT_SELECTION}. The source priority is used
 	 * to minimize recomputations of the expression, and it can also be used for
 	 * conflict resolution.
-	 * 
+	 *
 	 * @param expression
 	 *            The expression for which the source priority should be
 	 *            computed; may be <code>null</code>.
@@ -160,7 +159,7 @@ public final class SourcePriorityNameMapping implements ISources {
 
 	/**
 	 * Gets the priority for the source with the given name.
-	 * 
+	 *
 	 * @param sourceName
 	 *            The name of the variable as it would appear in an XML
 	 *            expression; should not be <code>null</code>.
