@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2003, 2014 IBM Corporation and others.
+ * Copyright (c) 2003, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,8 +7,10 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug https://bugs.eclipse.org/436247
- *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440136
+ *     Cornel Izbasa <cizbasa@info.uvt.ro> - Bug 436247
+ *     Lars Vogel <Lars.Vogel@vogella.com> - Bug 440136, 472654
+ *     Robert Roth <robert.roth.off@gmail.com> - Bugs 274005, 456291
+ *     Mickael Istria (Red Hat Inc.) - Theme and fontregistry rather than pref
  *******************************************************************************/
 package org.eclipse.ui.internal.themes;
 
@@ -100,12 +102,12 @@ import org.osgi.service.event.EventHandler;
 
 /**
  * Preference page for management of system colors, gradients and fonts.
- * 
+ *
  * @since 3.0
  */
 public final class ColorsAndFontsPreferencePage extends PreferencePage
         implements IWorkbenchPreferencePage {
-	
+
 	private static final String SELECTED_ELEMENT_PREF = "ColorsAndFontsPreferencePage.selectedElement"; //$NON-NLS-1$
 	/**
 	 * The preference that stores the expanded state.
@@ -115,31 +117,28 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * The token that separates expanded elements in EXPANDED_ELEMENTS_PREF.
 	 */
 	private static final String EXPANDED_ELEMENTS_TOKEN = "\t"; //$NON-NLS-1$
-	
+
 	/**
      * Marks category tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
      */
 	private static final char MARKER_CATEGORY = 'T';
-	
+
 	/**
 	 * Marks color tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
 	 */
 	private static final char MARKER_COLOR = 'C';
-	
+
 	/**
 	 * Marks font tokens in EXPANDED_ELEMENTS_PREF and SELECTED_ELEMENT_PREF.
 	 */
 	private static final char MARKER_FONT = 'F';
 
 	private static final int DEFINITION_NOT_AVAIL_COLOR = SWT.COLOR_WIDGET_LIGHT_SHADOW;
-			
+
     private class ThemeContentProvider implements ITreeContentProvider {
 
         private IThemeRegistry registry;
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ITreeContentProvider#getChildren(java.lang.Object)
-         */
         @Override
 		public Object[] getChildren(Object parentElement) {
             if (parentElement instanceof ThemeElementCategory) {
@@ -258,9 +257,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ITreeContentProvider#getParent(java.lang.Object)
-         */
         @Override
 		public Object getParent(Object element) {
 			if (element instanceof ThemeElementCategory)
@@ -291,9 +287,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return null;
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ITreeContentProvider#hasChildren(java.lang.Object)
-         */
         @Override
 		public boolean hasChildren(Object element) {
             if (element instanceof ThemeElementCategory) {
@@ -323,11 +316,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return false;
         }
 
-        /*
-		 * (non-Javadoc)
-		 * 
-		 * @see org.eclipse.jface.viewers.IStructuredContentProvider#getElements(java.lang.Object)
-		 */
         @Override
 		public Object[] getElements(Object inputElement) {
             ArrayList list = new ArrayList();
@@ -340,24 +328,21 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                     Set bindings = themeRegistry
                             .getPresentationsBindingsFor(categories[i]);
 					if (bindings == null) {
-						list.add(categories[i]);
+						Object[] children = getChildren(categories[i]);
+						if (children != null && children.length > 0) {
+							list.add(categories[i]);
+						}
 					}
                 }
             }
             return list.toArray(new Object[list.size()]);
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IContentProvider#dispose()
-         */
         @Override
 		public void dispose() {
             categoryMap.clear();
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IContentProvider#inputChanged(org.eclipse.jface.viewers.Viewer, java.lang.Object, java.lang.Object)
-         */
         @Override
 		public void inputChanged(Viewer viewer, Object oldInput, Object newInput) {
             categoryMap.clear();
@@ -406,9 +391,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             fontRegistry.addListener(listener);
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IBaseLabelProvider#dispose()
-         */
         @Override
 		public void dispose() {
             super.dispose();
@@ -437,7 +419,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             }
             fonts.clear();
         }
-        
+
         /**
          * Clears and disposes all fonts and fires a label update.
          */
@@ -447,9 +429,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
                     PresentationLabelProvider.this));
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.IFontProvider#getFont(java.lang.Object)
-         */
         @Override
 		public Font getFont(Object element) {
             Display display = tree.getDisplay();
@@ -473,9 +452,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             return JFaceResources.getDialogFont();
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ILabelProvider#getImage(java.lang.Object)
-         */
         @Override
 		public Image getImage(Object element) {
             if (element instanceof ColorDefinition) {
@@ -529,9 +505,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             }
         }
 
-        /* (non-Javadoc)
-         * @see org.eclipse.jface.viewers.ILabelProvider#getText(java.lang.Object)
-         */
         @Override
 		public String getText(Object element) {
             if (element instanceof IHierarchalThemeElementDefinition) {
@@ -546,8 +519,8 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
                     if (!ColorsAndFontsPreferencePage.equals(def.getCategoryId(), myCategory)) {
                     	if (isDefault(themeElement))
-							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
-               			return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), new Object[] { themeElement.getName(), def.getName() }); //$NON-NLS-1$
+							return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_default"), themeElement.getName(), def.getName() ); //$NON-NLS-1$
+               			return MessageFormat.format(RESOURCE_BUNDLE.getString("defaultFormat_override"), themeElement.getName(), def.getName() ); //$NON-NLS-1$
                     }
                 }
             }
@@ -556,7 +529,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
         /**
          * Return whether the element is set to default.
-         * 
+         *
          * @param def the definition
          * @return whether the element is set to default
          * @since 3.2
@@ -584,7 +557,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		/**
 		 * Returns the DEFINITION_NOT_AVAIL_COLOR color when definition is not
 		 * present in the current theme or null when it is available
-		 * 
+		 *
 		 * @param def
 		 *            the definition
 		 * @return the DEFINITION_NOT_AVAIL_COLOR color or null
@@ -597,13 +570,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 			return null;
 		}
 
-		/*
-		 * (non-Javadoc)
-		 * 
-		 * @see
-		 * org.eclipse.jface.viewers.IColorProvider#getBackground(java.lang.
-		 * Object)
-		 */
 		@Override
 		public Color getBackground(Object element) {
 			return null;
@@ -628,7 +594,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * made by the user. These changes need to be stored into the preference
 	 * store.
 	 */
-	private Map<ColorDefinition, RGB> colorPreferencesToSet = new HashMap<ColorDefinition, RGB>(7);
+	private Map<ColorDefinition, RGB> colorPreferencesToSet = new HashMap<>(7);
 
     private CascadingColorRegistry colorRegistry;
 
@@ -642,29 +608,29 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
      * The default color preview composite.
      */
     private Composite defaultColorPreview;
-    
+
     /**
      * The default font preview composite.
      */
     private Composite defaultFontPreview;
-    
+
     /**
      * The composite to use when no preview is available.
      */
     private Composite defaultNoPreview;
-    
+
 	/**
 	 * Currently selected font for preview; might be null.
 	 */
 	private Font currentFont;
-	
+
 	/**
-	 * Currently selected color for preview; might be null. 
+	 * Currently selected color for preview; might be null.
 	 */
 	private Color currentColor;
-	
+
 	/**
-	 * Canvas used to draw default color preview 
+	 * Canvas used to draw default color preview
 	 */
 	private Canvas colorSampler;
 
@@ -681,24 +647,31 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * The button to edit the default of the selected element.
-	 * 
+	 *
 	 * @since 3.7
 	 */
 	private Button editDefaultButton;
 
 	/**
 	 * The button to go to the default of the selected element.
-	 * 
+	 *
 	 * @since 3.7
 	 */
 	private Button goToDefaultButton;
+
+	/**
+	 * The button to expand the tree.
+	 *
+	 * @since 4.5
+	 */
+	private Button expandAllButton;
 
 	/**
 	 * Map of definition FontDefinition->FontData[] capturing the changes
 	 * explicitly made by the user. These changes need to be stored into the
 	 * preference store.
 	 */
-	private Map<FontDefinition, FontData[]> fontPreferencesToSet = new HashMap<FontDefinition, FontData[]>(
+	private Map<FontDefinition, FontData[]> fontPreferencesToSet = new HashMap<>(
 			7);
 
     private CascadingFontRegistry fontRegistry;
@@ -710,7 +683,12 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Map of definition id->FontData[] capturing the temporary changes caused
 	 * by a 'defaultsTo' font change.
+	 *
+	 * @deprecated in this page, we should only care about preferences,
+	 *             preference to fontValues synchronization in registry is
+	 *             handled in the ThemeAPI and listeners
 	 */
+	@Deprecated
     private Map fontValuesToSet = new HashMap(7);
 
     /**
@@ -746,7 +724,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     private Workbench workbench;
 
     private FilteredTree tree;
-    
+
 	private Text descriptionText;
 
 	private IEventBroker eventBroker;
@@ -795,7 +773,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	 * <li><strong>selectColor:</strong>ID - selects the color with the given ID
 	 * </li>
 	 * </p>
-	 * 
+	 *
 	 * @param data
 	 *            the data to be applied
 	 */
@@ -830,7 +808,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * Selects and reveals the given element.
-	 * 
+	 *
 	 * @param selection
 	 *            the object to select and reveal
 	 * @since 3.7
@@ -854,7 +832,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 	/**
 	 * Get the active theme.
-	 * 
+	 *
 	 * @return the active theme if there is one; <code>null</code> if there
 	 *         isn't or {@link #themeEngine} is <code>null</code>.
 	 */
@@ -891,13 +869,10 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		return separator;
 	}
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.preference.PreferencePage#createContents(org.eclipse.swt.widgets.Composite)
-     */
     @Override
 	protected Control createContents(Composite parent) {
     	PlatformUI.getWorkbench().getHelpSystem().setHelp(parent, IWorkbenchHelpContextIds.FONTS_PREFERENCE_PAGE);
-    	
+
         parent.addDisposeListener(new DisposeListener() {
             @Override
 			public void widgetDisposed(DisposeEvent e) {
@@ -905,11 +880,11 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 					appliedDialogFont.dispose();
             }
         });
-        
+
 		final SashForm advancedComposite = new SashForm(parent, SWT.VERTICAL);
 		GridData sashData = new GridData(SWT.FILL, SWT.FILL, true, true);
 		advancedComposite.setLayoutData(sashData);
-        
+
         Composite mainColumn = new Composite(advancedComposite, SWT.NONE);
         GridLayout layout = new GridLayout();
         layout.numColumns = 2;
@@ -926,7 +901,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         label.setLayoutData(data);
 
         createTree(mainColumn);
-        
+
         // --- buttons
         Composite controlColumn = new Composite(mainColumn, SWT.NONE);
         data = new GridData(GridData.FILL_VERTICAL);
@@ -935,7 +910,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         layout.marginHeight = 0;
         layout.marginWidth = 0;
         controlColumn.setLayout(layout);
-        
+
         // we need placeholder to offset the filter control of the table
         Label placeholder = new Label(controlColumn, SWT.NONE);
         GridData placeholderData = new GridData(SWT.TOP);
@@ -948,6 +923,9 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		createSeparator(controlColumn);
 		editDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("editDefault")); //$NON-NLS-1$
 		goToDefaultButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("goToDefault")); //$NON-NLS-1$
+		createSeparator(controlColumn);
+		expandAllButton = createButton(controlColumn, RESOURCE_BUNDLE.getString("expandAll")); //$NON-NLS-1$
+		expandAllButton.setEnabled(true);
         // --- end of buttons
 
 		createDescriptionControl(mainColumn);
@@ -959,7 +937,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		previewLayout.marginHeight = 0;
         previewColumn.setFont(parent.getFont());
         previewColumn.setLayout(previewLayout);
-        
+
         // --- create preview control
 		Composite composite = new Composite(previewColumn, SWT.NONE);
 
@@ -969,11 +947,11 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		layout2.marginHeight = 0;
 		layout2.marginWidth = 0;
 		composite.setLayout(layout2);
-        
+
 		Label label2 = new Label(composite, SWT.LEFT);
 		label2.setText(RESOURCE_BUNDLE.getString("preview")); //$NON-NLS-1$
 		myApplyDialogFont(label2);
-        
+
         previewComposite = new Composite(composite, SWT.NONE);
         previewComposite.setLayoutData(new GridData(GridData.FILL_BOTH));
         stackLayout = new StackLayout();
@@ -981,14 +959,14 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
         stackLayout.marginWidth = 0;
         previewComposite.setLayout(stackLayout);
         // -- end of preview control
-         
-        
+
+
 		defaultFontPreview = createFontPreviewControl();
 		defaultColorPreview = createColorPreviewControl();
 		defaultNoPreview = createNoPreviewControl();
-        
+
         hookListeners();
-        
+
         updateTreeSelection(tree.getViewer().getSelection());
 
 		advancedComposite.setWeights(new int[] { 75, 25 });
@@ -998,7 +976,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 	/**
 	 * Create the <code>ListViewer</code> that will contain all color
 	 * definitions as defined in the extension point.
-	 * 
+	 *
 	 * @param parent
 	 *            the parent <code>Composite</code>.
 	 */
@@ -1009,15 +987,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		// non-category elements to be returned in the event that their children
 		// do not and also search the descriptions.
 		PatternFilter filter = new PatternFilter() {
-			/*
-			 * (non-Javadoc)
-			 * 
-			 * @see
-			 * org.eclipse.ui.dialogs.PatternFilter#isLeafMatch(org.eclipse.
-			 * jface.viewers.Viewer, java.lang.Object)
-			 * 
-			 * @since 3.7
-			 */
 			@Override
 			protected boolean isLeafMatch(Viewer viewer, Object element) {
 				if (super.isLeafMatch(viewer, element))
@@ -1066,7 +1035,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
 				if (element instanceof ThemeElementDefinition) {
 					ThemeElementDefinition definition = (ThemeElementDefinition) element;
-					
+
 					if (element instanceof FontDefinition) {
 						editFont(tree.getDisplay());
 					} else if (element instanceof ColorDefinition
@@ -1082,9 +1051,6 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 		restoreTreeSelection();
 	}
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.dialogs.IDialogPage#dispose()
-     */
     @Override
 	public void dispose() {
 		eventBroker.unsubscribe(themeRegistryRestyledHandler);
@@ -1107,7 +1073,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
             try {
                 preview.dispose();
             } catch (RuntimeException e) {
-                WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorDisposePreviewLog"), //$NON-NLS-1$ 
+                WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorDisposePreviewLog"), //$NON-NLS-1$
                 		StatusUtil.newStatus(IStatus.ERROR, e.getMessage(), e));
             }
         }
@@ -1116,7 +1082,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get the ancestor of the given color, if any.
-     * 
+     *
      * @param definition the descendant <code>ColorDefinition</code>.
      * @return the ancestor <code>ColorDefinition</code>, or <code>null</code>
      * 		if none.
@@ -1130,7 +1096,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get the RGB value of the given colors ancestor, if any.
-     * 
+     *
      * @param definition the descendant <code>ColorDefinition</code>.
      * @return the ancestor <code>RGB</code>, or <code>null</code> if none.
      */
@@ -1144,7 +1110,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
     /**
      * Get the RGB value for the specified definition.  Cascades through
      * preferenceToSet, valuesToSet and finally the registry.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code>.
      * @return the <code>RGB</code> value.
      */
@@ -1161,7 +1127,7 @@ public final class ColorsAndFontsPreferencePage extends PreferencePage
 
     /**
      * Get colors that descend from the provided color.
-     * 
+     *
      * @param definition the ancestor <code>ColorDefinition</code>.
      * @return the ColorDefinitions that have the provided definition as their
      * 		defaultsTo attribute.
@@ -1243,7 +1209,7 @@ getPreferenceStore(),
 		}
         return null;
     }
-    
+
     protected boolean isFontSelected() {
     	Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
     	return (o instanceof FontDefinition);
@@ -1253,7 +1219,7 @@ getPreferenceStore(),
     	Object o = ((IStructuredSelection) tree.getViewer().getSelection()).getFirstElement();
     	return (o instanceof ColorDefinition);
     }
-    
+
     /**
      * Hook all control listeners.
      */
@@ -1265,7 +1231,7 @@ getPreferenceStore(),
                     updateTreeSelection(event.getSelection());
                 }
 		});
-		
+
         fontChangeButton.addSelectionListener(new SelectionAdapter() {
             @Override
 			public void widgetSelected(SelectionEvent event) {
@@ -1345,11 +1311,15 @@ getPreferenceStore(),
 			}
 		});
 
+		expandAllButton.addSelectionListener(new SelectionAdapter() {
+			@Override
+			public void widgetSelected(SelectionEvent event) {
+				tree.getViewer().expandAll();
+			}
+		});
+
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.ui.IWorkbenchPreferencePage#init(org.eclipse.ui.IWorkbench)
-     */
     @Override
 	public void init(IWorkbench aWorkbench) {
         this.workbench = (Workbench) aWorkbench;
@@ -1371,7 +1341,7 @@ getPreferenceStore(),
         themeManager.addPropertyChangeListener(themeChangeListener);
 
         updateThemeInfo(themeManager);
-        
+
         eventBroker = (IEventBroker) workbench.getService(IEventBroker.class);
 		eventBroker.subscribe(WorkbenchThemeManager.Events.THEME_REGISTRY_RESTYLED,
 				themeRegistryRestyledHandler);
@@ -1413,7 +1383,7 @@ getPreferenceStore(),
 
     /**
      * Answers whether the definition is currently set to the default value.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code> to check.
      * @return Return whether the definition is currently mapped to the default
      * 		value, either in the preference store or in the local change record
@@ -1568,11 +1538,8 @@ getPreferenceStore(),
 		return ThemeElementHelper.createPreferenceKey(currentTheme, definition.getId());
 	}
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.preference.PreferencePage#performDefaults()
-     */
     @Override
-	protected void performDefaults() {
+	public void performDefaults() {
         performColorDefaults();
         performFontDefaults();
 		updateControls();
@@ -1608,9 +1575,6 @@ getPreferenceStore(),
         return true;
     }
 
-    /* (non-Javadoc)
-     * @see org.eclipse.jface.preference.IPreferencePage#performOk()
-     */
     @Override
 	public boolean performOk() {
     	saveTreeExpansion();
@@ -1632,7 +1596,7 @@ getPreferenceStore(),
 
     /**
      * Resets the supplied definition to its default value.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code> to reset.
      * @return whether any change was made.
      */
@@ -1676,7 +1640,7 @@ getPreferenceStore(),
 
     /**
      * Set the value (in preferences) for the given color.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code> to set.
      * @param newRGB the new <code>RGB</code> value for the definitions
      * 		identifier.
@@ -1689,7 +1653,7 @@ getPreferenceStore(),
 
     /**
      * Set the value (in registry) for the given colors children.
-     * 
+     *
      * @param definition the <code>ColorDefinition</code> whose children should
      * 		be set.
      * @param newRGB the new <code>RGB</code> value for the definitions
@@ -1707,21 +1671,19 @@ getPreferenceStore(),
         }
     }
 
-    private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas) {
+	private void setDescendantRegistryValues(FontDefinition definition, FontData[] datas, boolean reset) {
         FontDefinition[] children = getDescendantFonts(definition);
-
         for (int i = 0; i < children.length; i++) {
             if (isDefault(children[i])) {
-                setDescendantRegistryValues(children[i], datas);
-                setRegistryValue(children[i], datas);
-                fontValuesToSet.put(children[i].getId(), datas);
-				fontPreferencesToSet.remove(children[i]);
+				setFontPreferenceValue(children[i], datas, reset);
             }
         }
     }
 
 	protected void setFontPreferenceValue(FontDefinition definition, FontData[] datas, boolean reset) {
-        setDescendantRegistryValues(definition, datas);
+		// descendant values must be computed and set before updating current,
+		// or isDefault will miss them
+		setDescendantRegistryValues(definition, datas, reset);
 		fontPreferencesToSet.put(definition, datas);
 		setRegistryValue(definition, datas);
 		updateDefinitionState(definition, reset);
@@ -1779,7 +1741,7 @@ getPreferenceStore(),
         //recalculate the fonts for the tree
         labelProvider.clearFontCacheAndUpdate();
     }
-    
+
     private void updateTreeSelection(ISelection selection) {
     	ThemeElementCategory category = null;
 	    Object element = ((IStructuredSelection) selection).getFirstElement();
@@ -1812,12 +1774,12 @@ getPreferenceStore(),
                     myApplyDialogFont(previewControl);
                     Text error = new Text(previewControl, SWT.WRAP | SWT.READ_ONLY);
                     error.setText(RESOURCE_BUNDLE.getString("errorCreatingPreview")); //$NON-NLS-1$
-                    WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorCreatePreviewLog"), //$NON-NLS-1$ 
+                    WorkbenchPlugin.log(RESOURCE_BUNDLE.getString("errorCreatePreviewLog"), //$NON-NLS-1$
                     		StatusUtil.newStatus(IStatus.ERROR, e.getMessage(), e));
                 }
 	        }
 		}
-    	
+
         if (previewControl == null) { // there is no preview for this theme, use default preview
         	if (element instanceof ColorDefinition)
         		previewControl = defaultColorPreview;
@@ -1886,7 +1848,7 @@ getPreferenceStore(),
 	 * character against the known constants and then call the appropriate
 	 * method on the theme registry. If the element does not exist or the string
 	 * is invalid <code>null</code> is returned.
-	 * 
+	 *
 	 * @param string the string to parse
 	 * @return the element, or <code>null</code>
 	 */
@@ -1954,7 +1916,7 @@ getPreferenceStore(),
 
 	/**
 	 * Edit the currently selected font.
-	 * 
+	 *
 	 * @param display
 	 *            the display to open the dialog on
 	 * @since 3.2
@@ -1965,7 +1927,7 @@ getPreferenceStore(),
 
 	/**
 	 * Edit the given font.
-	 * 
+	 *
 	 * @param definition
 	 *            the font definition
 	 * @param display
@@ -1984,16 +1946,16 @@ getPreferenceStore(),
 			}
 		}
 	}
-	
+
 	private void editColor(Display display) {
 		editColor(getSelectedColorDefinition(), display);
 	}
 
 	private void editColor(ColorDefinition definition, Display display) {
 		if (definition == null)
-			return; 
+			return;
 		RGB currentColor = colorRegistry.getRGB(definition.getId());
-		
+
 		ColorDialog colorDialog = new ColorDialog(display.getActiveShell());
 		colorDialog.setRGB(currentColor);
 		RGB selectedColor =  colorDialog.open();
@@ -2003,8 +1965,8 @@ getPreferenceStore(),
 			refreshElement(definition);
 		}
 	}
-	
-	
+
+
 	protected void updateControls() {
 		FontDefinition fontDefinition = getSelectedFontDefinition();
 		if (fontDefinition != null) {
@@ -2038,7 +2000,7 @@ getPreferenceStore(),
 		goToDefaultButton.setEnabled(false);
 		descriptionText.setText(""); //$NON-NLS-1$
 	}
-	
+
     /**
      * @return Return the default "No preview available." preview.
      */
@@ -2050,7 +2012,7 @@ getPreferenceStore(),
 		myApplyDialogFont(l);
 		return noPreviewControl;
 	}
-	
+
 	private void setCurrentFont(FontDefinition fontDefinition) {
 		currentFont = fontRegistry.get(fontDefinition.getId());
 		FontData[] fontData = currentFont != null ? currentFont.getFontData() : new FontData[0];
@@ -2076,13 +2038,13 @@ getPreferenceStore(),
 		descriptionText.setText(fomatDescription(fontDefinition));
 		fontSampler.redraw();
 	}
-	
+
 	public void setCurrentColor(ColorDefinition colorDefinition) {
 		currentColor = colorRegistry.get(colorDefinition.getId());
 		colorSampler.redraw();
 		descriptionText.setText(fomatDescription(colorDefinition));
 	}
-	
+
 	private Composite createFontPreviewControl() {
 		fontSampler = new Canvas(previewComposite, SWT.NONE);
 		GridLayout gridLayout = new GridLayout();
@@ -2134,7 +2096,7 @@ getPreferenceStore(),
         gridLayout.marginHeight = 0;
 		colorSampler.setLayout(gridLayout);
 		colorSampler.setLayoutData(new GridData(GridData.FILL_BOTH));
-		
+
 		colorSampler.addPaintListener(new PaintListener() {
 			@Override
 			public void paintControl(PaintEvent e) {
@@ -2155,12 +2117,14 @@ getPreferenceStore(),
 		int maxHeight = lineHeight * 4;
 		if (clientArea.height > maxHeight)
 			clientArea = new Rectangle(clientArea.x, clientArea.y, clientArea.width, maxHeight);
-		
+
 		String messageTop = RESOURCE_BUNDLE.getString("fontColorSample"); //$NON-NLS-1$
 		String fontColorString = RESOURCE_BUNDLE.getString("fontColorString"); //$NON-NLS-1$
 		RGB rgb = currentColor.getRGB();
 		String messageBottom = MessageFormat
-				.format(fontColorString, new Object[] { new Integer(rgb.red), new Integer(rgb.green), new Integer(rgb.blue) });
+				.format(fontColorString,
+						new Object[] { Integer.valueOf(rgb.red), Integer.valueOf(rgb.green),
+								Integer.valueOf(rgb.blue) });
 
 		// calculate position of the vertical line
 		int separator = (clientArea.width - 2) / 3;
@@ -2280,9 +2244,9 @@ getPreferenceStore(),
 
 	private void refreshElement(ThemeElementDefinition definition) {
 		tree.getViewer().refresh(definition);
-		updateTreeSelection(tree.getViewer().getSelection());		
-		
-		Object newValue = definition instanceof ColorDefinition ? 
+		updateTreeSelection(tree.getViewer().getSelection());
+
+		Object newValue = definition instanceof ColorDefinition ?
 			((ColorDefinition) definition).getValue(): ((FontDefinition) definition).getValue();
 		getCascadingTheme().fire(new PropertyChangeEvent(this, definition.getId(), null, newValue));
 	}
